@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-05-29 17:46:30 $ $Revision: 1.4 $
+\  $Date: 2007-07-09 17:38:09 $ $Revision: 1.5 $
 \
 \ ==============================================================================
 
@@ -166,7 +166,5 @@ t{ s" The price is 23.70 euro" rgx2 rgx-csearch 12 ?s }t
 t{ s" It is priceless"         rgx2 rgx-csearch -1 ?s }t
 
 t{ rgx2 rgx-free }t
-
-[THEN]
 
 \ ==============================================================================
